feat: 밸런스, UI, 공식 빌더 추가
밸런스: 9개 설정 변경
타워 밸런스
 흑마법사 빌더
 - 각성 조건: 1200킬 → 1250킬
 - 레거시 코드 삭제

 원거리 흑마법사
 - 피해 선형: 145 → 150
 - 생명력 흡수: 8% → 7%
 - 디버프 저항: 미설정 → 5%

 근거리 흑마법사
 - 생명력 흡수: 14% → 13%
 - 디버프 저항: 미설정 → 5%

 엔드 빌더
 - 피해 선형: 140 → 150
 - 피해 스케일: 20 → 25